--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@
     --cafe-bg: #f6efe6;
     --coffee-dark: #6b4c3b;
     --coffee-light: #c99b66;
-    --titlebar-blue: #87CEEB;
+    --titlebar-blue: #87a8eb;
     --text-main: #333333;
     --text-light: #666666;
     --border-color: #d3c7b3;
